--- a/src/Pages/Teams/Team.modue.scss
+++ b/src/Pages/Teams/Team.modue.scss
@@ -1,3 +1,3 @@
-.containerTeam{
-    background-image: url('../../../Assets/texture.png');
+.containerTeam {
+  background-image: url("../../../Assets/texture.png");
 }
