--- a/src/Components/Team/TeamMembers/TeamMemStructure.module.scss
+++ b/src/Components/Team/TeamMembers/TeamMemStructure.module.scss
@@ -14,7 +14,7 @@
   text-align: center;
   justify-items: center;
   align-items: center;
-  position: relative;
+  // position: absolute;
 }
 
 .containerMemStructure {
@@ -23,15 +23,23 @@
 
 .teamMemberGrid {
   align-items: center;
+  position: relative;
+  height: 580px;
 }
 
 .LottiesSVG {
   position: relative;
-  top: 20em;
+  bottom: 318px;
 }
 
-.gamusaWriting {
+.gamusa{
   text-align: center;
   justify-content: center;
-  // position: relative;
+  position: relative;
+  bottom: 360px;
+}
+
+.gamusaWriting{
+  position: relative;
+  bottom: 5.8rem;
 }
