--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -1,9 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Philosopher:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-body {
-    margin: 0;
-    padding: 0;
-  }
   .navbar {
     background-color: rgba(153, 76, 22, 0.2);
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
@@ -11,16 +7,16 @@ body {
     transition: all 0.5s linear;
   }
   
-  .navbar-container {
-    height: 5vh;
+  .navbarContainer {
+    height: 8vh;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 10px;
   }
   
-  .navbar-button {
-    width: 6vw;
+  .navbarButton {
+    width: 8vw;
     font-family: "Philosopher", sans-serif;
     font-size: 20px;
     color: black;
@@ -29,10 +25,9 @@ body {
     text-decoration: none;
   }
   
-  .posua-button {
-    width: 7vw;
+  .posuaButton {
+    width: 9vw;
     font-family: "Philosopher", sans-serif;
-    color: black;
     padding: 10px 30px;
     transition: font-size 0.2s ease-in-out;
     text-decoration: none;
@@ -50,16 +45,16 @@ body {
     width: 25px;
     transition: height 0.2s ease-in-out, width 0.2s ease-in-out;
   }
-  .navbar-button:hover,
-  .navbar-button.active {
+  .navbarButton:hover,
+  .navbarButton.active {
     font-size: 25px;
   }
-  .posua-button:hover,
-  .posua-button.active {
+  .posuaButton:hover,
+  .posuaButton.active {
     font-size: 32px;
   }
-  .posua-button:hover .posualogo,
-  .posua-button.active .posualogo {
+  .posuaButton:hover .posualogo,
+  .posuaButton.active .posualogo {
     animation: rotate 2s;
     height: 28px;
     width: 28px;
@@ -72,7 +67,7 @@ body {
       transform: rotate(360deg);
     }
   }
-  .hamburger-menu {
+  .hamburgerMenu {
     top: 0;
     position: absolute;
     display: none;
@@ -81,7 +76,7 @@ body {
     width: 40px;
   }
   
-  .hamburger-menu span {
+  .hamburgerMenu span {
     display: block;
     width: 100%;
     height: 5px;
@@ -109,31 +104,32 @@ body {
       box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
       backdrop-filter: blur(5px);
     }
-    .navbar-container {
+    .navbarContainer {
       display: none;
       flex-direction: column;
       gap: 1em;
       padding: 0;
     }
-    .navbar-button {
+    .navbarButton {
       width: 13vh;
     }
-    .navbar-container.active {
+    .navbarContainer.active {
       display: flex;
     }
-    .hamburger-menu {
+    .hamburgerMenu {
+      
       display: block;
     }
   
-    .hamburger-menu.active span:nth-child(1) {
+    .hamburgerMenu.active span:nth-child(1) {
       transform: translateY(10px) rotate(45deg);
     }
   
-    .hamburger-menu.active span:nth-child(2) {
+    .hamburgerMenu.active span:nth-child(2) {
       opacity: 0;
     }
   
-    .hamburger-menu.active span:nth-child(3) {
+    .hamburgerMenu.active span:nth-child(3) {
       transform: translateY(-10px) rotate(-45deg);
     }
   }
