--- a/src/Pages/Events/Events.module.scss
+++ b/src/Pages/Events/Events.module.scss
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Philosopher&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Philosopher&display=swap");
 
 * {
     margin: 0;
-    
 }
 
 .main {
@@ -15,19 +14,15 @@
         padding: 0 15%;
         font-size: 3vmin;
         text-align: center;
-        font-family: 'Philosopher', sans-serif;
-
-        @media only screen and (max-width: 600px) {
-            font-size: 2vmin;
-        }
+        font-family: "Philosopher", sans-serif;
     }
-
 }
-
 
 .phoolTema {
     position: absolute;
-    bottom: 0;
+    z-index: -1;
+
+    top: 30%;
     overflow: hidden;
     width: 100%;
 
@@ -38,32 +33,41 @@
     }
 
     #phoolLeft {
-        
         animation: phoolLeftAnime ease-in-out 6s 0s infinite;
         animation-direction: alternate-reverse;
     }
 
     #phoolRight {
-      
         animation: phoolRightAnime ease-in-out 6s 0s infinite;
         animation-direction: alternate-reverse;
     }
-
 }
-
 
 @keyframes phoolLeftAnime {
     to {
         transform: scale(1.2) translateX(180px);
-
     }
-
 }
 
 @keyframes phoolRightAnime {
     to {
         transform: scale(1.2) translateX(-180px);
-
     }
+}
+
+@media only screen and (max-width: 600px) {
+
+    .content {
+        font-size: 2vmin;
+    }
+
+    #phoolLeft {
+        left: 7%;
+    }
+
+    #phoolRight {
+        right: 7%;
+    }
+
 
 }
