ADD: Events page, Header component

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 :root {
-  --posua-font-1: 'Philosopher', sans-serif;
+  --posua-font-1: "Philosopher", sans-serif;
 
-  --posua-bg-1: #FCEBD1;
+  --posua-bg-1: #fcebd1;
 
   --heading-1-text-weight: 600;
   --heading-2-text-weight: 500;
