--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -8,21 +8,25 @@
   }
   
   .navbarContainer {
-    height: 8vh;
+    max-width: 100%;
+    margin: auto;
+    height: 62px;
     display: flex;
+    gap: 50px;
     justify-content: center;
     align-items: center;
     padding: 10px;
   }
   
   .navbarButton {
-    width: 8vw;
+    width: 70px;
     font-family: "Philosopher", sans-serif;
     font-size: 20px;
     color: black;
     padding: 10px;
     transition: font-size 0.2s ease-in-out;
     text-decoration: none;
+    text-align: center;
   }
   
   .posuaButton {
@@ -68,12 +72,14 @@
     }
   }
   .hamburgerMenu {
-    top: 0;
+    left: 0%;
+    top: 10px;
     position: absolute;
     display: none;
     cursor: pointer;
-    padding: 20px;
-    width: 40px;
+    padding: 25px;
+    width: 90px;
+    z-index: 100;
   }
   
   .hamburgerMenu span {
@@ -85,52 +91,54 @@
     background: linear-gradient(to right, #6f360d, #ffa500);
     transition: all 0.2s ease;
   }
-  @media screen and (max-width: 800px) {
-    .navbar {
-      height: 100vh;
-      width: 0vw;
-      right: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: none;
-      padding: 0;
-      background-color: transparent;
-    }
-    .navbar.active {
-      width: 75vw;
-      left: 0;
-      background: rgba(223, 204, 177, 0.76);
-      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
-      backdrop-filter: blur(5px);
-    }
+  @media screen and (max-width: 768px) {
     .navbarContainer {
-      display: none;
-      flex-direction: column;
-      gap: 1em;
-      padding: 0;
+    flex-direction: column;
+    gap:2em;
+    height: 100%;
+    position: absolute;
+    left: -100%;
+    opacity: 0;
+    transition: all 0.5s ease;
+    z-index: 1;
+    width: 75%;
     }
-    .navbarButton {
-      width: 13vh;
-    }
+    
     .navbarContainer.active {
-      display: flex;
+     background-color: rgba(153, 76, 22, 0.2);
+     box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.25);
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
     }
+    
+    .navbarButton {
+    width: 100%;
+    }
+    
+    .posuaButton {
+    width: 100%;
+    }
+    
     .hamburgerMenu {
-      
-      display: block;
+    display: block;
     }
-  
+    
+    .hamburgerMenu span {
+    display: block;
+    transition: all 0.3s ease-in-out;
+    }
+    
     .hamburgerMenu.active span:nth-child(1) {
-      transform: translateY(10px) rotate(45deg);
+    transform: rotate(45deg) translate(9px, 5px);
     }
-  
+    
     .hamburgerMenu.active span:nth-child(2) {
-      opacity: 0;
+    opacity: 0;
     }
-  
+    
     .hamburgerMenu.active span:nth-child(3) {
-      transform: translateY(-10px) rotate(-45deg);
+    transform: rotate(-45deg) translate(9px, -5px);
     }
-  }
+    }
   
