--- a/src/Components/Team/TeamPosuaWording/TeamPosuaWord.module.scss
+++ b/src/Components/Team/TeamPosuaWording/TeamPosuaWord.module.scss
@@ -1,7 +1,7 @@
-.texturebg {
-  background-image: url("../../../Assets/texture.png");
-  background-color: #fcebd1;
-}
+// .texturebg {
+//   background-image: url("../../../Assets/texture.png");
+//   background-color: #fcebd1;
+// }
 
 .containerTeamWordMukha {
   display: flex;
