--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -110,6 +110,7 @@
     position: absolute;
     left: -100%;
     opacity: 0;
+    top: 0;
     transition: all 0.5s ease;
     z-index: 1;
     width: 75%;
