--- a/src/Components/Team/TeamWiseSlider/ImageSlider.module.scss
+++ b/src/Components/Team/TeamWiseSlider/ImageSlider.module.scss
@@ -13,16 +13,18 @@
       font-weight: 700;
     }
     .sliderDiv {
+      outline: none;
       position: relative;
       display: flex !important;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       width: 100%;
+      margin-left: 0.5em;
+      margin-right: 0.5em;
       &:hover {
         .Card {
-          height: 35rem;
-          width: 27rem;
+          width: 26rem;
         }
         .TextForRotation {
           opacity: 1;
@@ -34,7 +36,7 @@
       .Card {
         transition: all 1s ease-in-out;
         width: 400px;
-        height: 33rem;
+        height: 35rem;
       }
       .Images {
         width: 270px;
@@ -48,9 +50,9 @@
         align-items: center;
         font-size: 2rem;
         position: absolute;
-        bottom: 0.1rem;
+        bottom: 0.5rem;
         opacity: 0;
-        transition: all 450ms ease-in-out;
+        transition: all 600ms ease-in-out;
       }
     }
   }
@@ -65,6 +67,9 @@
     }
     .TextForRotation {
       opacity: 1 !important;
+    }
+    .Designation{
+      font-size: 3rem !important;
     }
   }
   
