--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Philosopher&display=swap");
 
-* {
-}
+
 
 .HeaderBox {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   padding: 4% 0;
+  margin-bottom:-6%;
 }
 
 .main {
