--- a/src/Pages/Events/Events.module.scss
+++ b/src/Pages/Events/Events.module.scss
@@ -11,7 +11,7 @@
   overflow: hidden;
 
   .content {
-    padding: 0 15%;
+    padding: 5% 15%;
     font-size: 3vmin;
     text-align: center;
     font-family: "Philosopher", sans-serif;
