--- a/src/Components/Team/TeamPosuaWording/TeamPosuaWord.module.scss
+++ b/src/Components/Team/TeamPosuaWording/TeamPosuaWord.module.scss
@@ -9,20 +9,24 @@
   display: flex;
   justify-content: space-between;
   overflow: hidden;
-  // gap: 18rem;
+
 
   .flower2 {
     transform: rotateY(180deg);
     transform: scale(1);
     width: 2rem;
     animation: move1 6s ease-in-out infinite;
-
+    position: relative;
+    right: 3rem;
+    // overflow: hidden;
     // justify-self: flex-start;
   }
 
   .flower {
     justify-self: flex-end;
-
+    // overflow: hidden;
+    position: relative;
+    left: 3rem;
     animation: move2 6s ease-in-out infinite;
   }
 }
@@ -75,7 +79,7 @@
     transform: translateX(0);
   }
   50% {
-    transform: translateX(2rem);
+    transform: translateX(3rem);
   }
 }
 
@@ -85,7 +89,7 @@
     transform: translateX(0) rotateY(180deg);
   }
   50% {
-    transform: translateX(-2rem) rotateY(180deg);
+    transform: translateX(-3rem) rotateY(180deg);
   }
 }
 
