--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -11,6 +11,7 @@
     max-width: 100%;
     margin: auto;
     height: 62px;
+    gap: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -85,7 +86,7 @@
   }
   .hamburgerMenu {
     left: 0%;
-    position: absolute;
+    position: fixed;
     display: none;
     cursor: pointer;
     padding: 25px;
@@ -99,7 +100,7 @@
     height: 5px;
     margin: 5px;
     border-radius: 10px;
-    background: linear-gradient(to right, #6f360d, #ffa500);
+    background: linear-gradient(to right, #9d5018, #ffa500);
     transition: all 0.2s ease;
   }
   @media screen and (max-width: 768px) {
@@ -111,6 +112,8 @@
     left: -100%;
     opacity: 0;
     top: 0;
+    bottom: 0;
+    position: fixed;
     transition: all 0.5s ease;
     z-index: 1;
     width: 75%;
@@ -119,6 +122,7 @@
   .navbarContainer.active {
     background-color: rgba(153, 76, 22, 0.2);
     box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(1em);
     left: 0;
     top: 0;
     opacity: 1;
