--- a/src/Components/CarouselCard/CarouselCard.module.scss
+++ b/src/Components/CarouselCard/CarouselCard.module.scss
@@ -15,6 +15,8 @@
   font-family: var(--posua-font-1);
   height: 100%;
   border-radius: 10px;
+  border: 40px solid;
+  border-image: url("../../Assets/frame.png") 60 round;
   background-color: var(--posua-bg-1);
   .image {
     height: 100%;
