--- a/src/Components/CarouselCard/CarouselCard.module.scss
+++ b/src/Components/CarouselCard/CarouselCard.module.scss
@@ -17,6 +17,12 @@
   border-radius: 10px;
   border: 40px solid;
   border-image: url("../../Assets/frame.png") 60 round;
+
+  @media  screen and (width <= 640px) {
+    border: 30px solid;
+    border-image: url("../../Assets/frame.png") 60 round;
+  }
+
   background-color: var(--posua-bg-1);
   .image {
     height: 100%;
