ADDED: about us section

--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -1,4 +1,4 @@
-// This is a part of Template
+@import url("https://fonts.googleapis.com/css2?family=Philosopher&display=swap");
 .home {
   height: 100vh;
   h1 {
