--- a/src/Pages/Events/Events.module.scss
+++ b/src/Pages/Events/Events.module.scss
@@ -56,6 +56,12 @@
 }
 
 @media only screen and (max-width: 600px) {
+
+  .main{
+   padding-top: 50px;
+  }
+
+
   .content {
     font-size: 2vmin;
   }
