--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -116,7 +116,7 @@
     position: fixed;
     transition: all 0.5s ease;
     z-index: 1;
-    width: 75%;
+    width: 75vw;
   }
 
   .navbarContainer.active {
