--- a/src/Components/Team/TeamWiseSlider/ImageSlider.module.scss
+++ b/src/Components/Team/TeamWiseSlider/ImageSlider.module.scss
@@ -1,13 +1,14 @@
 .imgslider {
-    margin-inline: 6vw;
+    margin-inline: 2.5vw;
     padding-bottom: 6rem;
   
     .Designation {
       margin-bottom: 1.6rem;
       text-align: center;
       font-size: 3.6rem;
-      background: -webkit-linear-gradient(360deg, #411400 35.1%, #ffb70f 100.1%);
+      background-image: linear-gradient(90deg, #371000 14.1%, #ffbf2a 82.1%);
       background-clip: text;
+      -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       font-family: "Philosopher";
       font-weight: 700;
