--- a/src/Components/CarouselCard/CarouselCard.module.scss
+++ b/src/Components/CarouselCard/CarouselCard.module.scss
@@ -63,7 +63,7 @@
       &::-webkit-scrollbar {
         display: none;
       }
-      scrollbar-width: none;
+      scrollbar-width: 10px;
     }
   }
   &:hover .heading {
@@ -78,12 +78,12 @@
     animation: image both 2s;
   }
   &:hover .jaapileft {
-    transition: all 2s;
+    transition: all 2s ease-in-out;
     transform: rotate(360deg);
   }
 
   &:hover .jaapiright {
-    transition: all 2s;
+    transition: all 2s ease-in-out;
     transform: rotate(-360deg);
   }
 }
